add de parágrafo

--- a/pagina.html
+++ b/pagina.html
@@ -12,7 +12,7 @@
 
     <h1>painel administrativo de saulo</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus officiis eius tempora vel ea aperiam ducimus veritatis vero! Minus tempora ipsa error similique magni sint necessitatibus non. Quibusdam, neque? Provident!cle</p>
-    
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam aliquam amet laboriosam praesentium dicta, totam, hic consequuntur non perspiciatis quidem esse in, blanditiis beatae voluptatem consequatur impedit eaque unde minus.</p>
 
 
 </body>
